# solar-pannel-playgroud

./: .gitignore  GSA_Report_Ås_Norway.xlsx  LICENSE  README.md  consumption.csv  pyproject.toml  requirements.txt  runtime.txt  solar_economics_demo.ipynb  solar_production.py  solar_production_demo.ipynb  spotpriser.xlsx
