[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solar-panel-playground"
version = "0.1.0"
description = "Playground to calculate the revenue from installing solar-panels"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "fzeiser"}
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "jupyter",
    "notebook",
]

[tool.ruff]
# Line length configuration
line-length = 120

# Enable flake8-bugbear (`B`) rules
select = ["E", "F", "B"]

# Exclude a variety of commonly ignored directories
exclude = [
    ".git",
    ".eggs",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.format]
# Format configuration
quote-style = "double"
indent-style = "space"
line-ending = "auto"
